--- a/FoodGiantFlyerGenerator/FoodGiantFlyerGenerator/View/FlyerCreatorView.xaml
+++ b/FoodGiantFlyerGenerator/FoodGiantFlyerGenerator/View/FlyerCreatorView.xaml
@@ -53,7 +53,8 @@
                     <CheckBox Grid.Column="0" Grid.Row="2" Style="{StaticResource ChckBoxStyle}" cal:Message.Attach="SupplyChkBox_SelectionChanged($source)" />
                     <Label Grid.Column="1" Grid.Row="2" Content="No Rainchecks" Style="{StaticResource LblStyle}" />
                     <CheckBox Grid.Column="1" Grid.Row="2" Style="{StaticResource ChckBoxStyle}" cal:Message.Attach="RainChkBox_SelectionChanged($source)" />
-                    <Button Grid.Column="0" Grid.Row="3" Grid.ColumnSpan="2" Content="Generate Flyer" cal:Message.Attach="GenerateFlyer" />
+                    <Button Grid.Column="0" Grid.Row="3" Content="Preview Flyer" cal:Message.Attach="PreviewFlyer" />
+                    <Button Grid.Column="1" Grid.Row="3" Content="Generate Flyer" cal:Message.Attach="GenerateFlyer" />
 
                 </Grid>
             </Border>
