--- a/FoodGiantFlyerGenerator/FoodGiantFlyerGenerator/View/FlyerHistoryView.xaml
+++ b/FoodGiantFlyerGenerator/FoodGiantFlyerGenerator/View/FlyerHistoryView.xaml
@@ -28,9 +28,8 @@
         </Grid.RowDefinitions>
         <Label Grid.Row="0" Grid.ColumnSpan="3" Content="Select a Previously-Created Flyer"  Style="{StaticResource LblHeaderStyle}" />
 
-
-        <RadioButton  Grid.Column="0" Grid.Row="1" HorizontalAlignment="Center" VerticalAlignment="Center" Content="Find all created flyers"
-                         GroupName="SortType" cal:Message.Attach="UpdateResultsBox($source)"/>
+        <RadioButton Grid.Column="0" Grid.Row="1" HorizontalAlignment="Center" VerticalAlignment="Center" Content="Find all created flyers"
+                         GroupName="SortType" cal:Message.Attach="GetAllFlyerHistoryItems()"/>
 
         <Grid Grid.Column="1" Grid.Row="1">
             <Grid.RowDefinitions>
