--- a/FoodGiantFlyerGenerator/FoodGiantFlyerGenerator/View/FlyerHistoryView.xaml
+++ b/FoodGiantFlyerGenerator/FoodGiantFlyerGenerator/View/FlyerHistoryView.xaml
@@ -6,7 +6,8 @@
         xmlns:local="clr-namespace:FoodGiantFlyerGenerator"
         xmlns:cal="http://www.caliburnproject.org"
         Title="{Binding Title}" 
-        Height="600" Width="800">
+        MinHeight="300" MinWidth="800"
+        Height="300" Width="800">
     <Window.Resources>
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
@@ -18,12 +19,12 @@
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="1*"/>
             <ColumnDefinition Width="1*"/>
-            <ColumnDefinition Width="1*"/>
+            <ColumnDefinition Width="3*"/>
         </Grid.ColumnDefinitions>
         <Grid.RowDefinitions>
-            <RowDefinition Height="4*"/>
+            <RowDefinition Height="3*"/>
+            <RowDefinition Height="2*"/>
             <RowDefinition Height="1*"/>
-            <RowDefinition Height="4*"/>
             <RowDefinition Height="1*"/>
         </Grid.RowDefinitions>
         <Label Grid.Row="0" Grid.ColumnSpan="3" Content="Select a Previously-Created Flyer"  Style="{StaticResource LblHeaderStyle}" />
@@ -37,27 +38,35 @@
                 <RowDefinition Height="1*"/>
             </Grid.RowDefinitions>
             <RadioButton Grid.Row="0" HorizontalAlignment="Center" VerticalAlignment="Center" 
-                     Content="Sort by user"  GroupName="SortType" cal:Message.Attach="UpdateResultsBox($source)"/>
+                     Content="Sort by user"  GroupName="SortType" cal:Message.Attach="GetFlyerHistoryItemsByUser()"/>
             <ComboBox Grid.Row="1" ItemsSource="{Binding ManagerListCmboBox}" 
-                          SelectedItem="{Binding SelectedManager}" Style="{StaticResource CmboBoxStyle}" cal:Message.Attach="ManagerListCmboBox_SelectionChanged($this)" />
+                          SelectedItem="{Binding SelectedManager}" Style="{StaticResource CmboBoxStyle}" cal:Message.Attach="ManagerListCmboBox_SelectionChanged($source)" />
         </Grid>
 
         <Grid Grid.Column="2" Grid.Row="1">
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="1*"/>
+                <ColumnDefinition Width="1*"/>
+                <ColumnDefinition Width="1*"/>
+            </Grid.ColumnDefinitions>
             <Grid.RowDefinitions>
                 <RowDefinition Height="1*"/>
                 <RowDefinition Height="1*"/>
             </Grid.RowDefinitions>
-            <RadioButton Grid.Row="0" HorizontalAlignment="Center" VerticalAlignment="Center" Content="Sort by date"
-                         GroupName="SortType" cal:Message.Attach="UpdateResultsBox($source)"/>
-            <DatePicker Grid.Row="1" Grid.Column="0" cal:Message.Attach="PickStartSaleDate($source)"/>
-            
+            <RadioButton Grid.Row="0"  Grid.Column="0"  HorizontalAlignment="Center" VerticalAlignment="Center" Content="Sort by sale start date"
+                         GroupName="SortType" cal:Message.Attach="PickDateSearchType($source)"/>
+            <RadioButton Grid.Row="0"  Grid.Column="1"  HorizontalAlignment="Center" VerticalAlignment="Center" Content="Sort by sale end date"
+                         GroupName="SortType" cal:Message.Attach="PickDateSearchType($source)"/>
+            <RadioButton Grid.Row="0"  Grid.Column="2"  HorizontalAlignment="Center" VerticalAlignment="Center" Content="Sort by flyer creation date"
+                         GroupName="SortType" cal:Message.Attach="PickDateSearchType($source)"/>
+            <DatePicker Grid.Row="1" Grid.Column="0" Grid.ColumnSpan="3" cal:Message.Attach="GetAllFlyerHistoryItemsByDate($source)" Visibility="{Binding DatePickerVis}"/>
         </Grid>
 
-        <ComboBox Grid.Column="0" Grid.Row="2" Grid.ColumnSpan="3" x:Name="resultsComboBox" Style="{StaticResource CmboBoxStyle}" ItemsSource="{Binding ItemNameList}"
-                              cal:Message.Attach="ItemListCmboBox_SelectionChanged($source)" >
+        <ComboBox Grid.Column="0" Grid.Row="2" Grid.ColumnSpan="3" ItemsSource="{Binding ItemNameList}" Style="{StaticResource CmboBoxStyle}"
+                              cal:Message.Attach="ItemListCmboBox_SelectionChanged($source)">
             <ComboBox.ItemTemplate>
                 <DataTemplate>
-                    <Label Style="{StaticResource LblStyle}" Content="{Binding ItemName}" />
+                    <Label Style="{StaticResource LblStyle}" Content="{Binding ManagerName}" />
                 </DataTemplate>
             </ComboBox.ItemTemplate>
         </ComboBox>
