Combined all style files into single xaml file, added headings between sections, updated XAML references

--- a/FoodGiantFlyerGenerator/FoodGiantFlyerGenerator/View/FlyerItemContainerView.xaml
+++ b/FoodGiantFlyerGenerator/FoodGiantFlyerGenerator/View/FlyerItemContainerView.xaml
@@ -8,7 +8,7 @@
     <UserControl.Resources>
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
-                <ResourceDictionary Source="../Themes/FlyerItemContainerStyle.xaml"/>
+                <ResourceDictionary Source="../Themes/DefaultStyle.xaml"/>
             </ResourceDictionary.MergedDictionaries>
         </ResourceDictionary>
     </UserControl.Resources>
