--- a/FoodGiantFlyerGenerator/FoodGiantFlyerGenerator/View/FlyerCreatorView.xaml
+++ b/FoodGiantFlyerGenerator/FoodGiantFlyerGenerator/View/FlyerCreatorView.xaml
@@ -82,8 +82,8 @@
                     <Label Grid.Row="0" Grid.Column="3" Content="Store Phone Number" Style="{StaticResource LblStyle}"/>
                     <TextBox Grid.Row="1" Grid.Column="3" Text="{Binding StoreNumber}" cal:Message.Attach="StoreNumber_TextChanged($this)" MaxLength="11"/>
 
-                    <DatePicker Grid.Row="2" Grid.Column="0" Grid.ColumnSpan="2" cal:Message.Attach="PickStartSaleDate($source)"/>
-                    <DatePicker Grid.Row="2" Grid.Column="3" cal:Message.Attach="PickEndSaleDate($source)"/>
+                    <DatePicker Grid.Row="2" Grid.Column="0" Grid.ColumnSpan="2" Style="{StaticResource DatePickerStyle}" cal:Message.Attach="PickStartSaleDate($source)"/>
+                    <DatePicker Grid.Row="2" Grid.Column="3" Style="{StaticResource DatePickerStyle}" cal:Message.Attach="PickEndSaleDate($source)"/>
                 </Grid>
             </Border>
             
