--- a/FoodGiantFlyerGenerator/FoodGiantFlyerGenerator/View/FlyerItemView.xaml
+++ b/FoodGiantFlyerGenerator/FoodGiantFlyerGenerator/View/FlyerItemView.xaml
@@ -30,13 +30,15 @@
         </ComboBox>
         <!--Item Price-->
         <TextBox Grid.Column="1" Grid.Row="0" Text="{Binding PriceTxtBlk}" Style="{StaticResource TxtBoxStyle}"/>
-        <!--Make into text box, prompt user to enter item size-->
+        
         <!--Item Size-->
         <ComboBox Grid.Column="2"  ItemsSource="{Binding ItemSizeList}" Style="{StaticResource CmboBoxStyle}"
-                              cal:Message.Attach="ItemSizeCmboBox_SelectionChanged($source)"/>
+                              cal:Message.Attach="ItemSizeCmboBox_SelectionChanged($source)"  Visibility="{Binding ItemSizeCmboBoxBlockVis}"/>
+        <TextBox Grid.Column="2" Text="{Binding SelectedItemSize}" Style="{StaticResource TxtBoxStyle}" Visibility="{Binding ItemSizeTxtBlockVis}"/>
+        
         <!--Item Description-->
         <TextBox Grid.Column="3" Text="{Binding ItemDesTxtBlk}" Style="{StaticResource TxtBoxStyle}"/>
-        
+
         <!--Borders and Images-->
         <Grid Grid.Column="4" Visibility="Visible">
             <Grid.ColumnDefinitions>
