--- a/FoodGiantFlyerGenerator/FoodGiantFlyerGenerator/View/DatabaseMaintainerView.xaml
+++ b/FoodGiantFlyerGenerator/FoodGiantFlyerGenerator/View/DatabaseMaintainerView.xaml
@@ -6,8 +6,8 @@
         xmlns:local="clr-namespace:FoodGiantFlyerGenerator"
         xmlns:cal="http://www.caliburnproject.org"
         Title="{Binding Title}" 
-        Height="500" Width="700"
-        MinHeight="500" MinWidth="700">
+        Height="400" Width="900"
+        MinHeight="400" MinWidth="900">
     <Window.Resources>
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
@@ -35,26 +35,26 @@
         <Label Grid.Row="1" Grid.Column="0" Content="Item Name" Style="{StaticResource LblStyle}"/>
         <Label Grid.Row="1" Grid.Column="1" Content="Item Category" Style="{StaticResource LblStyle}"/>
         <Button Grid.Row="1" Grid.Column="2" Content="Select First Image" cal:Message.Attach="SelectImage1()"/>
-        <Button Grid.Row="1" Grid.Column="3" Content="Select Second Image" cal:Message.Attach="SelectImage2()"/>
-        <Button Grid.Row="1" Grid.Column="4" Content="Select Third Image" cal:Message.Attach="SelectImage3()"/>
+        <Button Grid.Row="1" Grid.Column="3" Content="Select Second Image" cal:Message.Attach="SelectImage2()" Visibility="{Binding Image2Vis}"/>
+        <Button Grid.Row="1" Grid.Column="4" Content="Select Third Image" cal:Message.Attach="SelectImage3()" Visibility="{Binding Image3Vis}"/>
 
         <Border Grid.Row="2" Grid.Column="0" Style="{StaticResource BdrStyle}">
-            <TextBox Grid.Row="2" Grid.Column="0" Text="{Binding ItemName}"/>
+            <TextBox Grid.Row="2" Grid.Column="0" Text="{Binding ItemName}" Style="{StaticResource TxtBoxEntryStyle}"/>
         </Border>
         <Border Grid.Row="2" Grid.Column="1" Style="{StaticResource BdrStyle}">
-            <TextBox Grid.Row="2" Grid.Column="1" Text="{Binding ItemCategory}"/>
+            <TextBox Grid.Row="2" Grid.Column="1" Text="{Binding ItemCategory}" Style="{StaticResource TxtBoxEntryStyle}"/>
         </Border>
 
         <Border Grid.Row="2" Grid.Column="2" Style="{StaticResource BdrStyle}">
-            <Image Grid.Row="2" Grid.Column="2" Source="{Binding Image1Src}"/>
+            <Image Grid.Row="2" Grid.Column="2" Source="{Binding Image1Src}" Style="{StaticResource ImageStyle}"/>
         </Border>
 
-        <Border Grid.Row="2" Grid.Column="3"  Style="{StaticResource BdrStyle}">
-            <Image Grid.Row="2" Grid.Column="3" Source="{Binding Image2Src}"/>
+        <Border Grid.Row="2" Grid.Column="3"  Style="{StaticResource BdrStyle}" Visibility="{Binding Image2Vis}">
+            <Image Grid.Row="2" Grid.Column="3" Source="{Binding Image2Src}" Style="{StaticResource ImageStyle}" Visibility="{Binding Image2Vis}"/>
         </Border>
 
-        <Border Grid.Row="2" Grid.Column="4" Style="{StaticResource BdrStyle}">
-            <Image Grid.Row="2" Grid.Column="4" Source="{Binding Image3Src}"/>
+        <Border Grid.Row="2" Grid.Column="4" Style="{StaticResource BdrStyle}" Visibility="{Binding Image3Vis}">
+            <Image Grid.Row="2" Grid.Column="4" Source="{Binding Image3Src}" Style="{StaticResource ImageStyle}" Visibility="{Binding Image3Vis}"/>
         </Border>
 
         <Button Grid.Row="3" Grid.Column="3" Content="Add Item To Database" Grid.ColumnSpan="2" cal:Message.Attach="AddItemToDatabase()"/>
