--- a/FoodGiantFlyerGenerator/FoodGiantFlyerGenerator/View/FlyerHistoryView.xaml
+++ b/FoodGiantFlyerGenerator/FoodGiantFlyerGenerator/View/FlyerHistoryView.xaml
@@ -39,8 +39,8 @@
             </Grid.RowDefinitions>
             <RadioButton Grid.Row="0" HorizontalAlignment="Center" VerticalAlignment="Center" 
                      Content="Sort by user"  GroupName="SortType" cal:Message.Attach="GetFlyerHistoryItemsByUser()"/>
-            <ComboBox Grid.Row="1" ItemsSource="{Binding ManagerListCmboBox}" 
-                          SelectedItem="{Binding SelectedManager}" Style="{StaticResource CmboBoxStyle}" cal:Message.Attach="ManagerListCmboBox_SelectionChanged($source)"/>
+            <ComboBox Grid.Row="1" ItemsSource="{Binding ManagerListCmboBox}" SelectedItem="{Binding SelectedManager}" 
+                      cal:Message.Attach="ManagerListCmboBox_SelectionChanged($source)"  Visibility="{Binding ManagerListCmboBoxSortVis}" Style="{StaticResource CmboBoxStyle}"/>
         </Grid>
 
         <Grid Grid.Column="2" Grid.Row="1">
@@ -66,11 +66,11 @@
                               cal:Message.Attach="ItemListCmboBox_SelectionChanged($source)">
             <ComboBox.ItemTemplate>
                 <DataTemplate>
-                    <Label Style="{StaticResource LblStyle}" Content="{Binding ManagerName}"/>
+                    <Label Style="{StaticResource LblStyle}" Content="{Binding FlyerCreationDate}"/>
                 </DataTemplate>
             </ComboBox.ItemTemplate>
         </ComboBox>
 
-        <Button Grid.ColumnSpan="3" Grid.Row="3" Content="Generate Flyer" cal:Message.Attach="GenerateFlyer()"/>
+        <Button Grid.ColumnSpan="3" Grid.Row="3" Content="Generate Flyer" cal:Message.Attach="GenerateFlyer()" Style="{StaticResource ButtonStyle}"/>
     </Grid>
 </Window>
